table of contents

--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -49,47 +49,46 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Table of content\n",
-    "\n",
+    "# Table of contents\n",
     "1.\tIntroduction\n",
-    "2.\tDatasets – N2DH-GOWT1, N2DL-HeLa and NIH3T3\n",
-    "3.\tImports\n",
-    "4.\tPreprocessing <br>\n",
-    "4.1 Clipping <br>\n",
-    "4.2 Filtering <br>\n",
-    "5.\tSegmentation algorithm <br>\n",
-    "5.1 Seeded region growing algorithm <br>\n",
-    "5.1.1 Seed selection <br>\n",
-    "5.1.1.1 Seed selection based on similarities <br>\n",
-    "5.1.1.2 Seed selection based on Euclidean distance <br>\n",
-    "5.1.2 Seeded region growing <br>\n",
-    "5.2 Unseeded region growing algorithm <br>\n",
-    "5.3 Region merging <br>\n",
-    "5.3.1 Region merging based on similarity of intensity <br>\n",
-    "5.3.2 Region merging based on size <br>\n",
-    "5.4 Differences between seeded and unseeded region growing <br>\n",
-    "6.\tEvaluation measures <br>\n",
-    "6.1 Dice score <br>\n",
-    "7. Results <br>\n",
-    "7.1 N2DH-GOWT1 <br>\n",
-    "7.2 N2DL-HeLa <br>\n",
-    "7.2.1 Shifted intensity range in N2DL-HeLa <br>\n",
-    "7.2.2 High cell density and intensity differences of nuclei <br>\n",
-    "7.2.3 Final results <br>\n",
-    "7.3 NIH3T3 <br>\n",
-    "7.3.1 Bright spots in NIH3T3 data set <br>\n",
-    "7.3.2 Blurs in NIH3T3 data set <br>\n",
-    "7.3.3 Changing background intensities <br>\n",
-    "7.3.4 Final results <br>\n",
-    "7.4 Evaluation of preprocessing <br>\n",
-    "7.5 Comparison Seeded and unseeded region growing results <br>\n",
-    "8. Challenges <br>\n",
-    "8.1 Optimizing Seeded region growing algorithm <br>\n",
-    "8.2 Optimizing Unseeded region growing algorithm <br>\n",
-    "8.3 Comparison Seeded and Unseeded region growing algorithms <br>\n",
-    "8.4 Memory error <br>\n",
-    "9. Discussion\n",
-    "10. Bibliography\n",
+    "1.\tDatasets – N2DH-GOWT1, N2DL-HeLa and NIH3T3\n",
+    "1.\tImports\n",
+    "1.\tPreprocessing <br>\n",
+    "    1. Clipping <br>\n",
+    "    1. Filtering <br>\n",
+    "1.\tSegmentation algorithm <br>\n",
+    "    1. Seeded region growing algorithm <br>\n",
+    "        1. Seed selection <br>\n",
+    "            1. Seed selection based on similarities <br>\n",
+    "            1. Seed selection based on Euclidean distance <br>\n",
+    "        1. Seeded region growing <br>\n",
+    "    1. Unseeded region growing algorithm <br>\n",
+    "    1. Region merging <br>\n",
+    "        1. Region merging based on similarity of intensity <br>\n",
+    "        1. Region merging based on size <br>\n",
+    "1. Differences between seeded and unseeded region growing <br>\n",
+    "1.\tEvaluation measures <br>\n",
+    "    1. Dice score <br>\n",
+    "1. Results <br>\n",
+    "    1. N2DH-GOWT1 <br>\n",
+    "    1. N2DL-HeLa <br>\n",
+    "        1. Shifted intensity range in N2DL-HeLa <br>\n",
+    "        1. High cell density and intensity differences of nuclei <br>\n",
+    "        1. Final results <br>\n",
+    "    1. NIH3T3 <br>\n",
+    "        1. Bright spots in NIH3T3 data set <br>\n",
+    "        1. Blurs in NIH3T3 data set <br>\n",
+    "        1. Changing background intensities <br>\n",
+    "        1. Final results <br>\n",
+    "    1. Evaluation of preprocessing <br>\n",
+    "    1. Comparison Seeded and unseeded region growing results <br>\n",
+    "1. Challenges <br>\n",
+    "    1. Optimizing Seeded region growing algorithm <br>\n",
+    "    1. Optimizing Unseeded region growing algorithm <br>\n",
+    "    1. Comparison Seeded and Unseeded region growing algorithms <br>\n",
+    "    1. Memory error <br>\n",
+    "1. Discussion\n",
+    "1. Bibliography\n",
     "\n",
     "<br>"
    ],
@@ -181,8 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -199,8 +207,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
