--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -615,10 +615,10 @@
     "only partly detected and thus merged to the background. However, the focus was set on detecting all nuclei, even if\n",
     "they are only partly detected. As a result, a filter with size 3 was used.\n",
     "\n",
-    "Another difference to consider is the normalization of calculated intensity distances.\n",
-    "In seeded region growing intensity distances are always normalized to a value between 0 and 1.\n",
-    "Instead, in unseeded region growing only differences are calculated. This needs to be considered in preprocessing.\n",
-    "However, in region merging normalized distances are used which also affects unseeded region growing.\n",
+    "Another difference to be noted is the normalization of the calculated intensity distances.\n",
+    "In seeded region growing, the intensity distances are always normalized to a value between 0 and 1.\n",
+    "For unseeded region growing, only differences are calculated instead. This must be taken into account in preprocessing.\n",
+    "However, normalized distances are used in region merging, which also affects unseeded region growing.\n",
     "\n",
     "# Evaluation measures\n",
     "\n",
