--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -43,7 +43,7 @@
     "A further issue are interfering image elements with intensities similar to\n",
     "nuclei and this is still a challenge to be overcome.\n",
     "Another future improvement would be an automatic parameter determination for the different parameters used in\n",
-    "preprocessing, seed detection and region merging. In this prohect, all parameters were determined manually.\n"
+    "preprocessing, seed detection and region merging. In this project, all parameters were determined manually.\n"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "    1. Region merging <br>\n",
     "        1. Region merging based on similarity of intensity <br>\n",
     "        1. Region merging based on size <br>\n",
-    "1. Differences between Seeded and unseeded region growing <br>\n",
+    "1. Differences between seeded and unseeded region growing <br>\n",
     "1.\tEvaluation measures <br>\n",
     "    1. Dice score <br>\n",
     "1. Results <br>\n",
@@ -82,11 +82,11 @@
     "        1. Changing background intensities <br>\n",
     "        1. Final results <br>\n",
     "    1. Evaluation of preprocessing <br>\n",
-    "    1. Comparison Seeded and unseeded region growing results <br>\n",
+    "    1. Comparison seeded and unseeded region growing results <br>\n",
     "1. Challenges <br>\n",
-    "    1. Optimizing Seeded region growing algorithm <br>\n",
-    "    1. Optimizing Unseeded region growing algorithm <br>\n",
-    "    1. Comparison Seeded and Unseeded region growing algorithms <br>\n",
+    "    1. Optimizing seeded region growing algorithm <br>\n",
+    "    1. Optimizing unseeded region growing algorithm <br>\n",
+    "    1. Comparison seeded and unseeded region growing algorithms <br>\n",
     "    1. Memory error <br>\n",
     "1. Discussion\n",
     "1. Bibliography\n",
@@ -110,7 +110,7 @@
     "but also in the processing of geographical data.\n",
     "\n",
     "Region growing is a subset of the hybrid techniques of image segmentation which can be used for cell nuclei\n",
-    "segmentation. This class of methods can be further subdivided into Seeded and unseeded region growing, which will both\n",
+    "segmentation. This class of methods can be further subdivided into seeded and unseeded region growing, which will both\n",
     "be implemented in this project. In seeded region growing, selected initial seeds are assigned pixels from their\n",
     "neighborhood if the pixels have a high intensity similarity. Subsequently, certain found regions are merged if they\n",
     "are similar in their mean intensity or if they are to small (Shih and Cheng, 2005). In unseeded region growing, the\n",
@@ -337,8 +337,8 @@
     "Seeded region growing is a sub-method of image segmentation.\n",
     "It consists of the determination of initial seeds, followed by the assignment of pixels to the seeds, known as Seeded\n",
     "region growing (Adam and Bischof, 1994).\n",
-    "Regions can then be combined in Region merging.\n",
-    "The implementation of the Seeded region algorithm is based on the paper of Frank Y. Shih and Shouxian Cheng\n",
+    "Regions can then be combined in region merging.\n",
+    "The implementation of the seeded region algorithm is based on the paper of Frank Y. Shih and Shouxian Cheng\n",
     "(Shih and Cheng, 2005)."
    ]
   },
@@ -683,7 +683,7 @@
     "which is also visible in the final clipped image (second picture).\n",
     "A 3x3 median filter, applied after region merging, improves the result (third image). To compute the Dice score, this\n",
     "image is also clipped (right).\n",
-    "The weighted Dice score increases to 0.868 which is similar to the result of seeded region growing.\n",
+    "The Dice score increases to 0.868 which is similar to the result of seeded region growing.\n",
     "The unseeded region growing algorithm missed similar nuclei. These nuclei are very similar to the background and are\n",
     "therefore harder to detect."
    ]
@@ -850,7 +850,7 @@
     "Because nearly the whole bright spot is removed, it can be merged to the background by intensity distance.\n",
     "\n",
     "The Dice scores confirm that the third image was segmented the best.\n",
-    "However, the weighted Dice score of the third image reveals, that a part of the nucleus was merged to the background.\n",
+    "However, the Dice score of the third image reveals, that a part of the nucleus was merged to the background.\n",
     "This happens because the reflection leads to a smaller intensity difference between background and nucleus.\n",
     "\n",
     "### Blurs in NIH3T3 data set\n",
@@ -991,7 +991,7 @@
    "metadata": {},
    "source": [
     "On these pictures the seeded (second row) and unseeded (third row) region growing algorithm were conducted.\n",
-    "The obtained weighted Dice scores are shown in this bar plot."
+    "The obtained Dice scores are shown in this bar plot."
    ]
   },
   {
@@ -1029,7 +1029,7 @@
     "(0.9835).\n",
     "Compared to seeded region growing unseeded region growing showed better results overall.\n",
     "\n",
-    "## Comparison Seeded and Unseeded region growing results\n",
+    "## Comparison seeded and unseeded region growing results\n",
     "For both, seeded and unseeded region growing, parameters need to be determined for every image and data set\n",
     "individually.\n",
     "However, after optimizing preprocessing methods and parameters unseeded region growing lead to better results,\n",
@@ -1055,7 +1055,7 @@
    "source": [
     "# Challenges\n",
     "## Runtime errors\n",
-    "### Optimizing Seeded region growing algorithm\n",
+    "### Optimizing seeded region growing algorithm\n",
     "The implementation of Frank Y. Shih and Shouxian Cheng (Shih and Cheng, 2005),\n",
     "on which the implemented seeded region growing algorithm is based, labels every pixel individually, which leads to long runtimes.\n",
     "This is why many runtime problems were encountered, especially with the first implemented seeded region growing\n",
@@ -1066,7 +1066,7 @@
     "algorithm it is impossible to segment a whole image in a reasonable time using the available hardware.\n",
     "\n",
     "Hence, a new algorithm was implemented. It was evaluated whether to use numpy arrays or pandas data frames to\n",
-    "vectorize the algorithm. We decided to use numpy arrays because of their faster runtimes.\n",
+    "vectorize the algorithm. It was decided to use numpy arrays because of their faster runtimes.\n",
     "Before, only the smallest distance of a pixel to its neighboring regions could be stored and so the distances had to\n",
     "be recalculated during each loop. Now, all distances were stored.\n",
     "Moreover, the use of for-loops was almost completely avoided, and the algorithm was vectorized.\n",
@@ -1095,13 +1095,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimizing Unseeded region growing algorithm\n",
+    "### Optimizing unseeded region growing algorithm\n",
     "The algorithm proposed unseeded region growing algorithm in the paper of Zheng Lin, Jesse Jin and Hugues Talbot (Lin et al., 2000)\n",
     "led to the same problem. Because every pixel is\n",
-    "assigned individually, the runtime of the first implemented algorithm is too long to segment a complete image with our\n",
+    "assigned individually, the runtime of the first implemented algorithm is too long to segment a complete image with the\n",
     "available hardware.\n",
     "\n",
-    "That's why the algorithm was rewritten similarly to the seeded region growing algorithm.\n",
+    "This is why the algorithm was rewritten similarly to the seeded region growing algorithm.\n",
     "The runtime decreased by nearly 100 times."
    ]
   },
@@ -1123,7 +1123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparison of Seeded and unseeded region growing algorithm\n",
+    "### Comparison of seeded and unseeded region growing algorithm\n",
     "Whilst comparing both algorithms, no significant runtime difference between both algorithms can be discovered when\n",
     "compared on a small image. The runtime difference lies within the $3 \\sigma$ interval."
    ]
@@ -1150,7 +1150,7 @@
     "For the region merging algorithm an array with the same number of rows and columns as the region number\n",
     "is needed. If too many seeds are found in the seed detection, too many regions are detected in the seeded region\n",
     "growing, and the region merging algorithm can not be performed. When trying to do so, a memory error occurs.\n",
-    "That's why a method to reduce the seed number was implemented.\n",
+    "This is why a method to reduce the seed number was implemented.\n",
     "In unseeded region growing fewer regions occur which solves this problem right away.\n",
     "\n",
     "# Discussion\n",
@@ -1187,7 +1187,7 @@
     "Because of these problems, other evaluation methods should be considered in future research.\n",
     "\n",
     "Despite the big runtime improvements, the runtime in both proposed algorithms is still too long. An algorithm which\n",
-    "labels more than one pixel in one iteration could fix this problem. That's why using another algorithm\n",
+    "labels more than one pixel in one iteration could fix this problem. This is why using another algorithm\n",
     "is recommended in following research.\n",
     "\n",
     "All in all, both segmentation algorithms lead to satisfying results.\n",
