--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Here, the implemented algorithms were executed on the datasets N2DH-GOWT1, N2DL-HeLa and NIH3T3.\n",
     "In order to reduce noise, preprocessing was performed on the images. To further improve results, the parameters\n",
-    "used during region growing were adjusted for each data set. To evaluate the segmented image, the dice score was used.\n",
+    "used during region growing were adjusted for each data set. To evaluate the segmented image, the Dice score was used.\n",
     "For this, the obtained result images were compared to manually segmented ground truth images.\n",
     "\n",
     "\n",
@@ -633,11 +633,11 @@
     "between zero and one. The higher the value the better was the performance of the algorithm.\n",
     "<br>\n",
     "To evaluate an algorithm more accurately the Dice score can weight equally between different regions\n",
-    "(weighted dice score).\n",
+    "(weighted Dice score).\n",
     "With that, small and bigger regions can be considered equally (Tiu, 2019).\n",
     "This is important in nuclei detection because there are proportionally few pixels belonging to nuclei compared to pixels\n",
     "belonging to the background.\n",
-    "So loosing nuclei would not have the desired impact on the unweighted dice score.\n",
+    "So loosing nuclei would not have the desired impact on the unweighted Dice score.\n",
     "<br>\n",
     "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\left(\\frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}\\right)$$\n",
     "<br>\n",
@@ -1024,7 +1024,7 @@
     "Unseeded region growing showed similar results.\n",
     "A high weighted Dice score of 0.945 on the unprocessed image was determined\n",
     "as well as good results on every preprocessed image. All preprocessing methods improved the weighted Dice score.\n",
-    "For the Gauss filter a sigma of 3 was used, because a smaller sigma lead to a decrease of the dice score.\n",
+    "For the Gauss filter a sigma of 3 was used, because a smaller sigma lead to a decrease of the Dice score.\n",
     "The highest value was obtained with median filtering (0.9839) opposed to seeded region growing, followed by clipping\n",
     "(0.9835).\n",
     "Compared to seeded region growing unseeded region growing showed better results overall.\n",
@@ -1155,10 +1155,10 @@
     "\n",
     "# Discussion\n",
     "Despite the challenges of the different data sets images of each data set could be segmented successfully\n",
-    "using preprocessing. Especially in the first data set N2DH-GOWT1 satisfying results and high dice scores were obtained.\n",
+    "using preprocessing. Especially in the first data set N2DH-GOWT1 satisfying results and high Dice scores were obtained.\n",
     "In the second data set (N2DL-Hela) normalizing and preprocessing could be used to gain high Dice scores.\n",
-    "Little challenging images of the NIH3T3 data set led to high dice scores as well.\n",
-    "However, especially in images with bright spots and differing image intensities lower dice scores where obtained.\n",
+    "Little challenging images of the NIH3T3 data set led to high Dice scores as well.\n",
+    "However, especially in images with bright spots and differing image intensities lower Dice scores where obtained.\n",
     "Even though these challenges could be solved on image fragments, the resources didn't suffice to solve these issues\n",
     "on the whole image because of too long runtimes. This needs to be addressed in future research.\n",
     "\n",
