Dice score description

--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -725,25 +725,15 @@
     "<br>\n",
     "$$ DSC = \\frac{ 2 \\times |S \\cap G|}{|S| + |G|} $$\n",
     "<br>\n",
-    "The intersection is the number of pixels that have the same value in the gt and result image. The doubled\n",
-    "intersection is divided by the total number of pixels in the gt and result image. This yields a number\n",
-    "between zero and one. The higher the value the better was the performance of the algorithm.\n",
+    "This can be applied to boolean data, where a positive result indicates a detected nucleus,\n",
+    "and a negative result describes background.\n",
+    "Comparing the segmented image to the ground truth image, a pixel counts as true positive ($TP$) if it is correctly detected as\n",
+    "nucleus. False positive ($FP$) describes pixels falsely labeled as nucleus,\n",
+    "and false negative ($FN$) terms pixel of overseen nuclei.\n",
+    "Based on this consideration, the Dice score is calculated according to the following formula, resulting in a\n",
+    "value between zero and one. The higher the value the better was the performance of the algorithm.\n",
     "<br>\n",
-    "To evaluate an algorithm more accurately the Dice score can weight equally between different regions\n",
-    "(weighted Dice score).\n",
-    "With that, small and bigger regions can be considered equally (Tiu, 2019).\n",
-    "This is important in nuclei detection because there are proportionally few pixels belonging to nuclei compared to pixels\n",
-    "belonging to the background.\n",
-    "So loosing nuclei would not have the desired impact on the unweighted Dice score.\n",
-    "<br>\n",
-    "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\left(\\frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}\\right)$$\n",
-    "<br>\n",
-    "In this case two regions were considered: nuclei and background. For each region, the Dice score was calculated\n",
-    "individually and then weighted equally by calculating their mean value.\n",
-    "For implementation, the background was defined as the largest region and all other regions were considered as nuclei\n",
-    "in order to create a binary array.\n",
-    "This makes it possible to compare the gt, and the result images without depending on equal region numbers\n",
-    "for every nucleus.\n",
+    "$$ DSC = \\frac{2 TP}{2TP + FP + FN} $$\n",
     "\n",
     "# Results\n",
     "## N2DH-GOWT1\n",
@@ -1388,7 +1378,7 @@
     "Before, only the smallest distance of a pixel to its neighboring regions could be stored and so the distances had to\n",
     "be recalculated during each loop. Now, all distances were stored.\n",
     "Moreover, the use of for-loops was almost completely avoided, and the algorithm was vectorized.\n",
-    "On a fraction of the image, the runtime could be 20-fold decreased. Using a whole image, the improvement would be\n",
+    "On a fraction of the image, the runtime could be 10-fold decreased. Using a whole image, the improvement would be\n",
     "even bigger. This allows to execute the region growing algorithm using a whole image in 24 hours."
    ],
    "metadata": {
@@ -1397,20 +1387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "888 ms ± 43.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "8.66 s ± 2.49 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.45 s ± 615 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "8.79 s ± 2.28 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "image_intensity_small = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\")[300:350, 400:450]\n",
-    "image_seeds = sd.seeds(image_intensity_small, 0.5)\n",
+    "image_seeds = sd.seeds(image_intensity_small, 0.01)\n",
     "image_regions_from_seeds = sd.seed_merging(image_seeds)\n",
     "%timeit srg.region_growing(image_intensity_small, image_regions_from_seeds.copy())\n",
     "%timeit old_srg.region_growing(image_intensity_small, image_regions_from_seeds.copy())"
@@ -1440,14 +1430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.75 s ± 293 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "34.4 s ± 4.45 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.18 s ± 16.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "34.1 s ± 5.07 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1475,14 +1465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.01 s ± 40.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "1.49 s ± 43 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.54 s ± 272 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.51 s ± 225 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
