--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -1163,11 +1163,9 @@
     "Numerous and big nuclei lead to the increased Dice scores. \n",
     "\n",
     "## Evaluation of preprocessing\n",
-    "To test, which preprocessing method did lead to the best result, different clipping methods and filters were compared.\n",
-    "The results of applying the different preprocessing methods to the image sections can be seen in the first row.\n",
-    "The total algorithm for seeded  and unseeded region growing was applied to a fraction of an image of the second data set.\n",
-    "On the first data set high Dice scores were obtained without preprocessing.\n",
-    "Using the Dice score, the parameters for the different methods where defined."
+    "To test, which preprocessing method did lead to the best result, different clipping methods and filters were applied to a small section of an image of the second data set.\n",
+    "The results after applying the different preprocessing methods to the image section can be seen in the first row.\n",
+    "The highest obtained Dice score was used to manually define different parameters for each method.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1237,8 +1235,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "On these pictures the seeded in the second row and unseeded region growing algorithm in the third row were conducted.\n",
-    "The obtained Dice scores are shown in this bar plot."
+    "The results of the different preprocessed images after applying the algorithm for seeded and unseeded region growing are shown in the second and third row.\n",
+    "For each image, the Dice scores were calculated and are shown in this bar plot."
    ],
    "metadata": {
     "collapsed": false
@@ -1272,23 +1270,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "It is visible that the algorithm is working well on every image for seeded and unseeded region growing.\n",
+    "Looking at the Dice score it can be seen that preprocessing has basically improved the results and the algorithm for seeded and unseeded region growing is working quite well.\n",
     "\n",
-    "After seeded region growing, the Dice score after gauss filtering (0.908) is exactly the same as in\n",
-    "the unfiltered image, while all other weighted Dice scores are above 0.9.\n",
-    "This might be because, the Gauss filter with sigma 1 does not change the intensities\n",
-    "significantly, but a bigger sigma lead to blurring, and a lower Dice score.\n",
-    "All other preprocessing methods increase the weighted Dice score, but only clipping improves the weighted\n",
-    "Dice score significantly (approximately 0.91 to 0.98).\n",
-    "Normal clipping performs best (0.983). \n",
+    "Regarding the seeded region growing algorithm, for all preprocessing methods the Dice score remained approximately the same or was improved, except for appliying the gaussian filter.\n",
+    "This might be caused by the fact that the Gaussian filter with sigma 1 does not change the intensities significantly, but a larger sigma results in blurring and a lower Dice score.\n",
+    "Both clipping methods led to significantly improved Dice score, while the normal clipping performs best with a dice score of 0.972.\n",
     "\n",
-    "Unseeded region growing showed similar results.\n",
-    "A high weighted Dice score of 0.945 on the unprocessed image was determined\n",
-    "as well as good results on every preprocessed image. All preprocessing methods improved the weighted Dice score.\n",
-    "For the Gauss filter a sigma of 3 was used, because a smaller sigma lead to a decrease of the Dice score.\n",
-    "The highest value was obtained with median filtering (0.9839) opposed to seeded region growing, followed by clipping\n",
-    "(0.9835).\n",
-    "Compared to seeded region growing unseeded region growing showed better results overall.\n",
+    "By applying unseeded region growing to the preprocessed image section all Dice scores could be improved.\n",
+    "Again, the Gaussian filter performs worst compared to the other methods.\n",
+    "The highest Dice scores were obtained using the median filter, followed by the normal clipping method which both do not mainly differ in their obtained Dice score.\n",
+    "Compared to seeded region growing, the unseeded region growing algorithm showed better results and therby yielded to higher dice scores for both unprocessed and preprocessed images.\n",
     "\n",
     "## Comparison seeded and unseeded region growing results\n",
     "For both, seeded and unseeded region growing, parameters need to be determined for every image and data set\n",
