--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -135,7 +135,7 @@
     "assigned pixel is too high, a new region is formed. After unseeded region growing, region merging is performed as well.\n",
     "\n",
     "After implementing the seeded region growing algorithm, its performance will be evaluated.\n",
-    "For this, result images are compared to already segmented gt-images, and the Dice score is calculated.\n",
+    "For this, result images are compared to already segmented ground truth images, and the Dice score is calculated.\n",
     "Finally, seeded and unseeded region growing are also compared with each other using the Dice Score.\n",
     "\n",
     "<br>"
@@ -153,8 +153,8 @@
     "N2DH-GOWT1, N2DL-HeLa and NIH3T3.\n",
     "The datasets consist of a total of 28 image files, in which different structures of the nucleus were stained using the\n",
     "fluorescent protein GFP.\n",
-    "Included in the data sets are gt-images where the nuclei have already been segmented manually.\n",
-    "The images and gt-images of these datasets are often used to evaluate the performance of newly implemented algorithms.\n",
+    "Included in the data sets are ground truth images where the nuclei have already been segmented manually.\n",
+    "The images and ground truth images of these datasets are often used to evaluate the performance of newly implemented algorithms.\n",
     "\n",
     "Each dataset has specific challenges that need to be considered.\n",
     "\n",
@@ -271,8 +271,8 @@
     "In addition, a separate method was implemented in which the values below or above the thresholds were set to the\n",
     "minimum and maximum intensities of the image.\n",
     "This variant is intended to increase the contrast of the combined intensities to the remaining.\n",
-    "Below the original picture (left), the normal clipped picture (middle), and the picture clipped with the self\n",
-    "implemented function (right) are shown:"
+    "Below the original, unprocessed picture, the normal clipped picture and the picture clipped with the self\n",
+    "implemented function are shown:"
    ],
    "metadata": {
     "collapsed": false
@@ -419,8 +419,8 @@
     "$d_{max}$ is then also compared to the threshold.\n",
     "If $d_{max}$ is lower than the threshold, the pixel is considered a seed.\n",
     "\n",
-    "For visualization the  algorithm is applied to a section of the loaded image (left).\n",
-    "The implemented algorithm results in the following seeds (right)."
+    "For visualization the  algorithm is applied to a section of the loaded image.\n",
+    "The implemented algorithm results in the following seeds:"
    ],
    "metadata": {
     "collapsed": false
@@ -555,7 +555,7 @@
     "are recalculated. This is used to calculate the pixel which is labeled next according to the above conditions.\n",
     "1.  The algorithm continues until all pixel are labeled to a region.\n",
     "\n",
-    "The result of unseeded region growing can be seen below (unprocessed image left, result of seeded region growing right).\n",
+    "The result of unseeded region growing can be seen below compared to the unprocessed image.\n",
     "Here the pixel on position (0,0) is selected as the starting point."
    ],
    "metadata": {
@@ -664,10 +664,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The figures compare the over-segmented image with the merged image after region merging based on intensity\n",
-    "distance, with the image after complete merging, and with the clipped image (from left to right).\n",
-    "The first row shows the results of seeded region growing.\n",
-    "In the second row the results of unseeded region growing can be seen.\n",
+    "Here, the over-segmented image after region growing can be compared with the merged image based on similarity, the image after complete merging based on similarity and size and with the clipped image.\n",
+    "The first row shows the results of seeded region growing and in the second row the results of unseeded region growing can be seen.\n",
     "\n",
     "## Differences between seeded and unseeded region growing\n",
     "In seeded region growing the pixels of one region are always connected. In the case of unseeded region growing,\n",
@@ -703,7 +701,7 @@
     "# Evaluation measures\n",
     "\n",
     "## Dice score\n",
-    "The Dice score is a method to determine the accuracy of segmentation. Thereby, a gt-image (given\n",
+    "The Dice score is a method to determine the accuracy of segmentation. Thereby, a ground truth image (given\n",
     "in the data set) is compared with the resulting image of the algorithm. The Dice score is defined as follows:\n",
     "<br>\n",
     "$$ DSC = \\frac{ 2 \\times |S \\cap G|}{|S| + |G|} $$\n",
@@ -726,7 +724,7 @@
     "A Dice score of 0.865 was obtained.\n",
     "\n",
     "Comparing the original image with the segmentation result shows that nearly all visible nuclei were caught.\n",
-    "However, in the gt-image some nuclei are shown, which were not detected by the implemented algorithm.\n",
+    "However, in the ground truth image some nuclei are shown, which were not detected by the implemented algorithm.\n",
     "This difference is reflected in the Dice score, but a value of 0.865 is still satisfying."
    ],
    "metadata": {
@@ -888,7 +886,7 @@
     "threshold and 10000 (size threshold) and filtering with a median filter with sigma 3\n",
     "to remove salt and pepper noise and clipping is shown.\n",
     "\n",
-    "Comparing the resulting images with the gt image (sixth image) shows that in unseeded region growing most nuclei\n",
+    "Comparing the resulting images with the ground truth image (sixth image) shows that in unseeded region growing most nuclei\n",
     "were detected, while after seeded region growing more nuclei are missing.\n",
     "The Dice scores of the results confirm this. It is noticeable that the first data set led to better Dice\n",
     "scores for seeded region growing.\n",
@@ -1484,8 +1482,8 @@
     "For evaluation only the Dice score was used.\n",
     "To gain a meaningful Dice score all background regions need to be merged together.\n",
     "This requirement complicates segmentation on images which differing background intensities and leads to worse results.\n",
-    "Differences of gt-images and the received results are partly caused\n",
-    "by mistakes in the gt-images, which do not show nuclei on image borders.\n",
+    "Differences of ground truth images and the received results are partly caused by mistakes in the ground truth images,\n",
+    "which do not show nuclei on image borders.\n",
     "Because of these problems, other evaluation methods should be considered in future research.\n",
     "\n",
     "Despite the big runtime improvements, the runtime in both proposed algorithms is still too long. An algorithm which\n",
